--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <br><br><br><br>
         <div>
         <img name="slide" class="img1">
-        <div class="textonimg" style="color: orangered;">Electricity is dangerous</div>
+        <!--<div class="textonimg" style="color: orangered;">Electricity is dangerous</div>-->
         </div>
         <br>
         <p>Electricity is the best gift of science to mankind. This is the age of electricity. 
